@@ -1,5 +1,6 @@
 Revision history for HTML::FormWidgets
 
+          - Create buttons not input type submit. Styles better
           - Fixed defined text error in ::Label
           - Form attrs deprecated in favour of form config
           - Removed Ident and VERSION from most files
